new profile 'standalone' that allows to run editor locally on H2 (server mode)